--- a/client/src/app/components/header-section/header-section.component.html
+++ b/client/src/app/components/header-section/header-section.component.html
@@ -55,8 +55,8 @@
           <mat-form-field class="bg-transparent last-name" appearance="fill">
             <mat-label>Last Name</mat-label>
             <input matInput placeholder="Last Name" type="text" formControlName="last_name">
-            <mat-icon matSuffix *ngIf="generalInfoForm.get('first_name').valid && generalInfoForm.get('last_name').valid">done</mat-icon>
-            <mat-icon matSuffix class="error-field" *ngIf="(!generalInfoForm.get('first_name').valid || !generalInfoForm.get('last_name').valid) && (generalInfoForm.get('first_name').touched || generalInfoForm.get('last_name').touched)">close</mat-icon>
+            <mat-icon matSuffix *ngIf="generalInfoForm.get('first_name').valid && helperService.checkSpacesString(generalInfoForm.get('first_name').value) && generalInfoForm.get('last_name').valid && helperService.checkSpacesString(generalInfoForm.get('last_name').value)">done</mat-icon>
+            <mat-icon matSuffix class="error-field" *ngIf="(!generalInfoForm.get('first_name').valid || !generalInfoForm.get('last_name').valid) && (generalInfoForm.get('first_name').touched || generalInfoForm.get('last_name').touched) && helperService.checkSpacesString(generalInfoForm.get('first_name').value) && helperService.checkSpacesString(generalInfoForm.get('last_name').value)">close</mat-icon>
           </mat-form-field>
         </div>
 
@@ -64,8 +64,8 @@
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>City</mat-label>
             <input matInput placeholder="City" type="text" [matAutocomplete]="autocompleteCity" formControlName="city">
-            <mat-icon matSuffix *ngIf="generalInfoForm.get('city').value && generalInfoForm.get('city').valid && checkCityValidation()">done</mat-icon>
-            <mat-icon matSuffix class="error-field" *ngIf="generalInfoForm.get('city').value && !checkCityValidation() && generalInfoForm.get('city').touched">close</mat-icon>
+            <mat-icon matSuffix *ngIf="generalInfoForm.get('city').value && generalInfoForm.get('city').valid && helperService.checkSpacesString(generalInfoForm.get('city').value) && checkCityValidation()">done</mat-icon>
+            <mat-icon matSuffix class="error-field" *ngIf="generalInfoForm.get('city').value && helperService.checkSpacesString(generalInfoForm.get('city').value) && !checkCityValidation() && generalInfoForm.get('city').touched">close</mat-icon>
             <mat-autocomplete #autocompleteCity="matAutocomplete" (closed)="onBlurCity()">
               <mat-option *ngFor="let city of autocomplete_cities" [value]="helperService.cityNameFromAutoComplete(city.city)" (onSelectionChange)="onSelectCity(city)">
                 <span>{{city.city}}</span>
@@ -78,8 +78,8 @@
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>State</mat-label>
             <input matInput placeholder="State" type="text" [matAutocomplete]="autocompleteState" formControlName="state">
-            <mat-icon matSuffix *ngIf="generalInfoForm.get('state').value && generalInfoForm.get('state').valid && checkStateValidation()">done</mat-icon>
-            <mat-icon matSuffix class="error-field" *ngIf="generalInfoForm.get('state').value && !checkStateValidation() && generalInfoForm.get('state').touched">close</mat-icon>
+            <mat-icon matSuffix *ngIf="generalInfoForm.get('state').value && helperService.checkSpacesString(generalInfoForm.get('state').value) && generalInfoForm.get('state').valid && checkStateValidation()">done</mat-icon>
+            <mat-icon matSuffix class="error-field" *ngIf="generalInfoForm.get('state').value && helperService.checkSpacesString(generalInfoForm.get('state').value) && !checkStateValidation() && generalInfoForm.get('state').touched">close</mat-icon>
             <mat-autocomplete #autocompleteState="matAutocomplete" (closed)="onBlurState()">
               <mat-option *ngFor="let state of autocomplete_states" [value]="state.state" (onSelectionChange)="onSelectState(state)">
                 <span>{{state.state}}</span>
