--- a/client/src/app/pages/profile/user-profile/user-profile.component.html
+++ b/client/src/app/pages/profile/user-profile/user-profile.component.html
@@ -1,5 +1,7 @@
 <ng-container *ngIf="!isProfileLoading" class="profile-header">
-  <header-section [editMode]="editMode" [generalInfo]="userGeneralInfo" (updatedGeneralInfoData)="onChangedGeneralInfoData($event)" (updatedProfileStatus)="onChangeProfileStatus($event)" id="header-section"></header-section>
+  <header-section [editMode]="editMode" [generalInfo]="userGeneralInfo"
+    (updatedGeneralInfoData)="onChangedGeneralInfoData($event)" (updatedProfileStatus)="onChangeProfileStatus($event)"
+    id="header-section"></header-section>
 </ng-container>
 
 <ng-container *ngIf="!isProfileLoading">
@@ -11,23 +13,16 @@
     <a *ngIf="!editMode" (click)="onClickEdit()">Edit Profile</a>
     <a *ngIf="editMode" [class.disabled]="!headerFormValid" (click)="onClickUpdate()">Update Changes</a>
   </legend>
-  <main-section
-    [selectedNavMenu]="navMenu[selectedNavMenuIndex].id"
-    [userGeneralInfo]="userGeneralInfo"
-    [educationList]="educationList"
-    [experienceList]="experienceList"
-    [userSkillsList]="userSkillsList"
-    [userInterestsList]="userInterestsList"
-    [userProjectsList]="userProjectsList"
-    [userPublicationsList]="userPublicationsList"
-    [externalResourcesList]="externalResourcesList"
-    [editMode]="editMode"
-    [class.edit-mode]="editMode"
-    (navMenuVisibilityChanged)="onChangeNavMenuVisibility($event)"
-    (userIntroUpdated)="onChangeUserIntro($event)"
-    (clickEdit)="onClickEdit()"
-  ></main-section>
-  <nav-section [navMenu]="navMenu" [editMode]="editMode" [navIndex]="selectedNavMenuIndex" [headerFormValid]="headerFormValid" (clickUpdate)="onClickUpdate()" (selectNavMenu)="onSelectNavMenu($event)" (selectedNavItem)="onSelectNavItem($event)" [isOpened]="isNavMenuOpened" [class.nav-hidden]="!((isHandset$ | async) && isNavMenuOpened)" id="nav-section"></nav-section>
+  <main-section [selectedNavMenu]="navMenu[selectedNavMenuIndex].id" [userGeneralInfo]="userGeneralInfo"
+    [educationList]="educationList" [experienceList]="experienceList" [userSkillsList]="userSkillsList"
+    [userInterestsList]="userInterestsList" [userProjectsList]="userProjectsList"
+    [userPublicationsList]="userPublicationsList" [externalResourcesList]="externalResourcesList" [editMode]="editMode"
+    [class.edit-mode]="editMode" (navMenuVisibilityChanged)="onChangeNavMenuVisibility($event)"
+    (userIntroUpdated)="onChangeUserIntro($event)" (clickEdit)="onClickEdit()"></main-section>
+  <nav-section [navMenu]="navMenu" [editMode]="editMode" [navIndex]="selectedNavMenuIndex"
+    [headerFormValid]="headerFormValid" (clickUpdate)="onClickUpdate()" (selectNavMenu)="onSelectNavMenu($event)"
+    (selectedNavItem)="onSelectNavItem($event)" [isOpened]="isNavMenuOpened"
+    [class.nav-hidden]="!((isHandset$ | async) && isNavMenuOpened)" id="nav-section"></nav-section>
 </ng-container>
 
 <ng-container *ngIf="isProfileLoading">
