Fix url on about us mobile

--- a/client/src/app/components/main-toolbar/main-toolbar.component.html
+++ b/client/src/app/components/main-toolbar/main-toolbar.component.html
@@ -41,7 +41,7 @@
           <a routerLink='' routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">
             Home
           </a>
-          <a routerLink='search' routerLinkActive="active-link">
+          <a routerLink='read-me' routerLinkActive="active-link">
             About Us
           </a>
           <a routerLink='positions' routerLinkActive="active-link">
