Worked on page layout and PR comments.

--- a/client/src/app/components/action-button/action-button.component.scss
+++ b/client/src/app/components/action-button/action-button.component.scss
@@ -6,3 +6,10 @@
     }
   }
 }
+:host-context(.position-search-reload-result) {
+  button{
+    line-height: 24px;
+    // margin-right: 1px;
+    padding: 6px 20px !important;
+  }
+}
