--- a/client/src/app/pages/positions/position-search/position-search.component.html
+++ b/client/src/app/pages/positions/position-search/position-search.component.html
@@ -2,7 +2,7 @@
 <div [formGroup]="positionForm" class="position-main-container">
     <div class="postion-search-header">
         <mat-form-field appearance="standard" class="search">
-            <mat-icon matSuffix>search</mat-icon>
+            <mat-icon matSuffix (click)="onSearchPosition($event)" >search</mat-icon>
             <input matInput placeholder="Search Position" type="text" [matAutocomplete]="autocompleteSearch"
                 formControlName="searchPosition">
             <mat-autocomplete #autocompleteSearch="matAutocomplete">
@@ -23,7 +23,12 @@
             <div class="selectall">
 
                 <round-checkbox id="test" title="Select All" [checked]="selectedAllFlag" (statusChange)="selectAll($event)"></round-checkbox>
-                <action-button color="primary" title="Reload Results" (click)="getJobData()"></action-button>
+                <action-button class="position-search-reload-result" color="primary" title="Apply Selected"></action-button>
+                <action-button class="position-search-reload-result" color="primary" title="Save Selected"></action-button>
+                <action-button class="position-search-reload-result" color="primary" title="Reload Results" (click)="getJobData()"></action-button>
+                
+                
+
             </div>
             <div class="sort-item">
                 <mat-label>Sort by</mat-label>&nbsp;
@@ -57,8 +62,13 @@
                             </li>
                             <li>
                                 <img src="assets/icons/ic_location.svg">
-                                <span class="image">
-                                    {{job.hq_city_name}}, {{job.hq_state_name}}, {{job.hq_country_name}}</span>
+                                <span class="image" *ngIf="job.hq_city_name && job.hq_state_name && job.hq_country_name; else noLocation">
+                                    {{job.hq_city_name }},
+                                    {{job.hq_state_name }},
+                                    {{job.hq_country_name }}</span>
+                                    <ng-template #noLocation>
+                                            <span>N/A</span>
+                                        </ng-template>
                             </li>
                             <li>
                                 <img src="assets/icons/ic_clock.svg">
@@ -68,60 +78,88 @@
                     </div>
                     <div class="card">
                         <div class="card-item">
-                            <span>Positions</span>
-                            <p>{{job.level}}</p>
-                        </div>
-                        <div class="card-item">
-                            <span>Salary</span>
-                            <p>{{job.pay}} USD</p>
-                        </div>
-                        <div class="card-item">
-                            <span>Industry</span>
-                            <p>{{job.main_industry_name}}</p>
-                        </div>
-                        <div class="card-item">
                             <span>Qualification Level</span>
                             <p>Overly Qualified</p>
                         </div>
+                        <div class="card-item">
+                            <span>Salary</span>
+
+                            <p>{{job.pay ? job.pay : 'N/A' }} <span *ngIf="job.pay">USD</span></p>
+
+                        </div>
+                        <div class="card-item">
+                            <span>Industry</span>
+
+                            <p>{{job.main_industry_name ? job.main_industry_name : 'N/A'}}</p>
+
+                        </div>
+                        <div class="card-item">
+                            <span>Positions</span>
+                            <p>{{job.level ? job.level : 'N/A'}}</p>
+                        </div>
+
                     </div>
 
                     <div class="main-card">
 
                         <ul type="none">
-                            <li class="skill-chips">
-                                <h5 for="skill_required">Skills Required</h5>
+                            <li>
+                                <h5 for="skill_required">Skills Required  {{ job.minimum_skills?.length}}</h5>
+                                <div class="skil-height-fix" [ngClass]="{'skill-more-height': showMoreFlag}" *ngIf="job.minimum_skills; else noSkills">
+                                    <div class="skills-preferred-m" *ngFor="let min_skill of job.minimum_skills">
+                                        <simple-tag type="gray" title="{{min_skill.skill}}" ellipseTag="true" value="{{min_skill.skill_level}}"
+                                            [matTooltip]="SkillLevelDescription[min_skill.skill_level]"
+                                            [matTooltipShowDelay]=500>
+                                        </simple-tag>
 
-                                <div class="skills-preferred-m" *ngFor="let min_skill of job.minimum_skills">
-                                    <simple-tag type="gray" title="{{min_skill.skill}}" ellipseTag="true" value="{{min_skill.skill_level}}" [matTooltip]="SkillLevelDescription[min_skill.skill_level]">
-                                    </simple-tag>
+                                    </div>
 
                                 </div>
+
+
                             </li>
                             <li class="skill-chips">
-                                <h5 class="skill-label" for="skill_preferred">Skills Preferred</h5>
-                                <div class="skills-preferred-m" *ngFor="let preskill of job.preferred_skills">
-                                    <simple-tag type="gray" title="{{preskill.skill}}" ellipseTag="true" value="{{preskill.skill_level}}"
-                                        [matTooltip]="SkillLevelDescription[preskill.skill_level]">
-                                    </simple-tag>
+                                <h5 class="skill-label" for="skill_preferred">Skills Preferred  {{job.preferred_skills?.length}}</h5>
+                                <div class="skil-height-fix" [ngClass]="{'skill-more-height': showMoreFlag}" *ngIf="job.preferred_skills; else noSkills">
+                                    <div class="skills-preferred-m" *ngFor="let preskill of job.preferred_skills">
+                                        <simple-tag type="gray" title="{{preskill.skill}}" ellipseTag="true" value="{{preskill.skill_level}}"
+                                            [matTooltip]="SkillLevelDescription[preskill.skill_level]"
+                                            [matTooltipShowDelay]=500>
+                                        </simple-tag>
+                                    </div>
                                 </div>
+
                             </li>
                         </ul>
+                        <ng-template #noSkills>
+                            <ul>
+                                <li>N/A</li>
+                            </ul>
+                        </ng-template>
                     </div>
 
                     <div *ngIf="showMoreFlag">
                         <div class="qualification-level-m">
                             <h5>Qualification Level Estimate Breakdown</h5>
 
-                            <simple-tag *ngIf="job?.true_fitscore_info.skills_weight" type="gray" title="Skill Match" ellipseTag="true" value="1">
+                            <simple-tag *ngIf="job.true_fitscore_info?.skills_weight" type="gray" title="Skill Match"
+                                ellipseTag="true" value="{{6*job.true_fitscore_info?.skills_fitscore}}">
                             </simple-tag>
-                            <simple-tag *ngIf="job?.true_fitscore_info.experience_weight" type="gray" title="Experience Match" ellipseTag="true" value="1">
+                            <simple-tag *ngIf="job.true_fitscore_info?.experience_weight" type="gray" title="Experience Match"
+                                ellipseTag="true" value="{{6*job.true_fitscore_info?.experience_fitscore}}">
                             </simple-tag>
-                            <simple-tag *ngIf="job?.true_fitscore_info.education_weight" type="gray" title="Education Match" ellipseTag="true" value="6">
+                            <simple-tag *ngIf="job.true_fitscore_info?.education_weight" type="gray" title="Education Match"
+                                ellipseTag="true" value="{{6*job.true_fitscore_info?.education_fitscore}}">
                             </simple-tag>
-                            <simple-tag *ngIf="job?.true_fitscore_info.interests_weight" type="gray" title="Interests Match" ellipseTag="true" value="3">
+                            <simple-tag *ngIf="job.true_fitscore_info?.interests_weight" type="gray" title="Interests Match"
+                                ellipseTag="true" value="{{6*job.true_fitscore_info?.interests_fitscore}}">
                             </simple-tag>
-                            <simple-tag *ngIf="job?.true_fitscore_info.required_skills_weight" type="gray" title="Required Skills Match" ellipseTag="true" value="2">
+                            <simple-tag *ngIf="job.true_fitscore_info?.required_skills_weight" type="gray" title="Required Skills Match"
+                                ellipseTag="true" value="{{6*job.true_fitscore_info?.required_skills_fitscore}}">
                             </simple-tag>
+                            <p *ngIf="job.true_fitscore_info ||  (job.true_fitscore_info && !job.true_fitscore_info.skills_weight && !job.true_fitscore_info.experience_weight && !job.true_fitscore_info.education_weight && !job.true_fitscore_info.interests_weight && !job.true_fitscore_info.required_skills_weight)">
+                                N/A
+                            </p>
                         </div>
 
 
@@ -132,42 +170,7 @@
                                 {{job.position_desc}}
                             </p>
                         </div>
-                        <div class="responsibilites">
-                            <h5>Responsibilites</h5>
-                            <ul>
-                                <li>Deliver strategically sound, coneceptually based, iconic digital experiences across
-                                    marketing
-                                    and product touch points.</li>
-                                <li>Deliver strategically sound, coneceptually based, iconic digital experiences across
-                                    marketing
-                                    and product touch points.</li>
-                                <li>Deliver strategically sound, coneceptually based, iconic digital experiences across
-                                    marketing
-                                    and product touch points.</li>
-                                <li>Deliver strategically sound, coneceptually based, iconic digital experiences across
-                                    marketing
-                                    and product touch points.</li>
-                                <li>Deliver strategically sound, coneceptually based, iconic digital experiences across
-                                    marketing
-                                    and product touch points.</li>
-                                <li>Deliver strategically sound, coneceptually based, iconic digital experiences across
-                                    marketing
-                                    and product touch points.</li>
-                            </ul>
-                        </div>
-                        <div class="min-qual">
-                            <h5>Minimum Qualifications</h5>
-                            <ul *ngIf="job.minimum_skills; else noQuali">
-                                <li>{{job.minimum_skills[0].skill}}</li>
-                            </ul>
-                            <ng-template #noQuali>
-                                <ul>
-                                    <li>N/A</li>
-                                </ul>
-                            </ng-template>
 
-
-                        </div>
                     </div>
                 </div>
                 <div class="show-button">
@@ -182,7 +185,7 @@
             </div>
         </div>
         <div class="pagination">
-            <ul type="none" >
+            <ul type="none">
                 <li class="active">1</li>
                 <li>2</li>
                 <li>3</li>
@@ -329,5 +332,5 @@
             <h4>Loading...</h4>
         </div>
     </ng-container>
-     
+
 </div>
