--- a/client/src/styles/cf-theme.scss
+++ b/client/src/styles/cf-theme.scss
@@ -532,6 +532,23 @@ action-button {
           width: 0;
           background-color: transparent;
         }
+
+        h3 {
+          text-align: center;
+        }
+
+        ul {
+          &.skill_level_desc {
+            padding: 0;
+
+            li {
+              line-height: 26px;
+              margin-bottom: 10px;
+            }
+
+
+          }
+        }
       }
 
       mat-dialog-actions {
